--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <hr class="w-25 mx-auto">
             <center>
             <div class="row g-sm-2" style="margin-left: 90px;">
-                <div class=" col-md-4 col-sm-6 col-12">
+                <div class=" col-sm-6 col-xl-4 col-lg-4 col-md-6 col-xs-12">
                     <div class="card" style="width: 18rem;">
                         <img src="webdevoper.jpg" class="card-img-top img-fluid img-thumbnail" alt="...">
                         <div class="card-body">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <br>
-                <div class="col-md-4 col-sm-6 col-12">
+                <div class="col-sm-6 col-xl-4 col-lg-4 col-md-6 col-xs-12">
                     <div class="card" style="width: 18rem;">
                         <img src="ecommerce.jpg" class="card-img-top img-fluid img-thumbnail" alt="...">
                         <div class="card-body">
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <br>
-                <div class="col-md-4 col-sm-6 col-12">
+                <div class="col-sm-6 col-xl-4 col-lg-4 col-md-6 col-xs-12">
                     <div class="card" style="width: 18rem;">
                         <img src="job portal.jpg" class="card-img-top img-fluid img-thumbnail" alt="...">
                         <div class="card-body">
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 
-                <div class="col-md-4 col-sm-6 col-12">
+                <div class="col-sm-6 col-xl-4 col-lg-4 col-md-6 col-xs-12">
                     <div class="card" style="width: 18rem;">
                         <img src="portfolio.jpg" class="card-img-top img-fluid img-thumbnail" alt="...">
                         <div class="card-body">
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 col-12">
+                <div class="col-sm-6 col-xl-4 col-lg-4 col-md-6 col-xs-12">
                     <div class="card" style="width: 18rem;">
                         <img src="result calculator.jpg" class="card-img-top img-fluid img-thumbnail" alt="...">
                         <div class="card-body">
