--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p class="lead" style="text-align: justify;">
                         My objective is to work in highly dynamic environment where I can put my best efforts for the
                         overall development of the organization through personal growth.
-                        I'am currently purusing my engineering degree at Basaveshwar Engineering College,my
+                        I'am currently pursuing my engineering degree at Basaveshwar Engineering College,my
                         specialisation is Information Science Engineering.
                         my personal skills are Communication and public speaking,Leadership and good decision
                         making,Flexible team player and responsible.
@@ -61,9 +61,7 @@
                             tutorial project at IIT Bombay</b>.<br>
                         Satish Kali is a versatile web designer due to his extensive history in graphic and web design.
                         His dedication to continuously learning about new web design trends and concepts has made him a
-                        valuable member of the team. With eight years of experience and a master's in web design, his
-                        expertise can help customers modernize with websites and appeal to expanding customer
-                        populations.
+                        valuable member of the team.
 
                     </p><center>
                     <button type="button" class="btn"><img src=github.svg><a
@@ -78,7 +76,7 @@
             <h1 class="display-3 text-center mt-3">PROJECTS</h1>
             <hr class="w-25 mx-auto">
             <center>
-            <div class="row g-sm-2" style="margin-left: 6px;">
+            <div class="row g-sm-2" style="margin-left: 4px;">
                 <div class="col-sm-6 col-xl-4 col-lg-4 col-md-6 col-xs-12">
                     <div class="card" style="width: 18rem;">
                         <img src="webdevoper.jpg" class="card-img-top img-fluid img-thumbnail" alt="...">
